<resources>
    <string name="app_name">Music Player</string>
    <string name="past_string">00:00</string>
    <string name="remain_string">3:32</string>
    <string name="song_string">song name</string>
    <string name="artist_string">artist name</string>
    <string name="fab_play">fab play</string>
    <string name="fab_previous">fab_previous</string>
    <string name="fab_next">fab_next</string>
    <string name="song_name">song name</string>
    <string name="artist_name">artist name</string>
</resources>